# cpp-mario-clone

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.txt  config.txt  instructions.txt
assets/: assets.txt  level1.txt
assets/terrain/: ground.aseprite  stone.aseprite
include/: Components.h  Entity.h  EntityManager.h  Game.h  Scene_Play.h  Vec2.h
src/: Action.cpp  Animation.cpp  Assets.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  GameEngine.cpp  Physics.cpp  Scene.cpp  Scene_Menu.cpp  Scene_Play.cpp  Vec2.cpp  main.cpp  vec2.cpp
